[gd_scene load_steps=2 format=3 uid="uid://lobby_scene"]

[ext_resource type="Script" path="res://scripts/ui/lobby.gd" id="1"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="LeftPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Title" type="Label" parent="MainContainer/LeftPanel"]
layout_mode = 2
text = "GAME LOBBY"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="MainContainer/LeftPanel"]
layout_mode = 2

[node name="GamesLabel" type="Label" parent="MainContainer/LeftPanel"]
layout_mode = 2
text = "Available Games:"

[node name="GamesList" type="ItemList" parent="MainContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
select_mode = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="MainContainer/LeftPanel"]
layout_mode = 2

[node name="RefreshButton" type="Button" parent="MainContainer/LeftPanel/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Refresh"

[node name="JoinButton" type="Button" parent="MainContainer/LeftPanel/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join Game"

[node name="CreateButton" type="Button" parent="MainContainer/LeftPanel/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Create Game"

[node name="Separator2" type="HSeparator" parent="MainContainer/LeftPanel"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="MainContainer/LeftPanel"]
layout_mode = 2
text = "Connected to server"
horizontal_alignment = 1

[node name="DisconnectButton" type="Button" parent="MainContainer/LeftPanel"]
layout_mode = 2
text = "Disconnect"

[node name="VSeparator" type="VSeparator" parent="MainContainer"]
layout_mode = 2

[node name="RightPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChatLabel" type="Label" parent="MainContainer/RightPanel"]
layout_mode = 2
text = "Lobby Chat"
horizontal_alignment = 1

[node name="Separator3" type="HSeparator" parent="MainContainer/RightPanel"]
layout_mode = 2

[node name="ChatLog" type="RichTextLabel" parent="MainContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true

[node name="ChatInputContainer" type="HBoxContainer" parent="MainContainer/RightPanel"]
layout_mode = 2

[node name="ChatInput" type="LineEdit" parent="MainContainer/RightPanel/ChatInputContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Type a message..."

[node name="SendButton" type="Button" parent="MainContainer/RightPanel/ChatInputContainer"]
layout_mode = 2
text = "Send"

[node name="CreateGameDialog" type="Window" parent="."]
title = "Create Game"
initial_position = 2
size = Vector2i(400, 300)
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="CreateGameDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="CreateGameDialog/VBoxContainer"]
layout_mode = 2
text = "Game Name:"

[node name="NameInput" type="LineEdit" parent="CreateGameDialog/VBoxContainer"]
layout_mode = 2
placeholder_text = "My Game"

[node name="Spacer1" type="Control" parent="CreateGameDialog/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="VisibilityLabel" type="Label" parent="CreateGameDialog/VBoxContainer"]
layout_mode = 2
text = "Visibility:"

[node name="VisibilityOption" type="OptionButton" parent="CreateGameDialog/VBoxContainer"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Public"
popup/item_1/text = "Private"
popup/item_1/id = 1

[node name="Spacer2" type="Control" parent="CreateGameDialog/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="MaxPlayersLabel" type="Label" parent="CreateGameDialog/VBoxContainer"]
layout_mode = 2
text = "Max Players:"

[node name="MaxPlayersSpinBox" type="SpinBox" parent="CreateGameDialog/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 8.0
value = 4.0

[node name="Spacer3" type="Control" parent="CreateGameDialog/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="CreateGameDialog/VBoxContainer"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="CreateGameDialog/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="CreateConfirmButton" type="Button" parent="CreateGameDialog/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Create"

[connection signal="pressed" from="MainContainer/LeftPanel/ButtonsContainer/RefreshButton" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="MainContainer/LeftPanel/ButtonsContainer/JoinButton" to="." method="_on_join_pressed"]
[connection signal="pressed" from="MainContainer/LeftPanel/ButtonsContainer/CreateButton" to="." method="_on_create_pressed"]
[connection signal="pressed" from="MainContainer/LeftPanel/DisconnectButton" to="." method="_on_disconnect_pressed"]
[connection signal="pressed" from="MainContainer/RightPanel/ChatInputContainer/SendButton" to="." method="_on_send_chat_pressed"]
[connection signal="text_submitted" from="MainContainer/RightPanel/ChatInputContainer/ChatInput" to="." method="_on_chat_submitted"]
[connection signal="close_requested" from="CreateGameDialog" to="." method="_on_create_dialog_closed"]
[connection signal="pressed" from="CreateGameDialog/VBoxContainer/ButtonsContainer/CancelButton" to="." method="_on_create_dialog_closed"]
[connection signal="pressed" from="CreateGameDialog/VBoxContainer/ButtonsContainer/CreateConfirmButton" to="." method="_on_create_confirmed"]
